@@ -2,13 +2,13 @@
 html lang="en" xmlns="http://www.w3.org/1999/xhtml"
   head
     meta content="text/html; charset=utf-8" http-equiv="Content-Type"
-    title <%= options[:name] %>
+    title Padrino Admin
     ==stylesheet_link_tag :base, "themes/<%= options[:theme] %>/style"
 
   body
     #container
       #box
-        h1 <%= options[:name] %>
+        h1 Padrino Admin
         #block-login.block
           h2 Login Box
           .content.login
