@@ -93,6 +93,38 @@ class TestAdminAppGenerator < Test::Unit::TestCase
       assert_match_in_file 'set :session_secret, "', "#{@apptmp}/sample_project/admin/app.rb"
     end
 
+    should 'correctly generate a new padrino admin application with slim renderer' do
+      assert_nothing_raised { silence_logger { generate(:project, 'sample_project', "--root=#{@apptmp}", '-d=activerecord', '-e=slim') } }
+      assert_nothing_raised { silence_logger { generate(:admin_app, "--root=#{@apptmp}/sample_project") } }
+      assert_file_exists("#{@apptmp}/sample_project")
+      assert_file_exists("#{@apptmp}/sample_project/admin")
+      assert_file_exists("#{@apptmp}/sample_project/admin/app.rb")
+      assert_file_exists("#{@apptmp}/sample_project/admin/controllers")
+      assert_file_exists("#{@apptmp}/sample_project/admin/controllers/accounts.rb")
+      assert_file_exists("#{@apptmp}/sample_project/admin/controllers/base.rb")
+      assert_file_exists("#{@apptmp}/sample_project/admin/controllers/sessions.rb")
+      assert_file_exists("#{@apptmp}/sample_project/admin/views")
+      assert_file_exists("#{@apptmp}/sample_project/admin/views/accounts/_form.slim")
+      assert_file_exists("#{@apptmp}/sample_project/admin/views/accounts/edit.slim")
+      assert_file_exists("#{@apptmp}/sample_project/admin/views/accounts/index.slim")
+      assert_file_exists("#{@apptmp}/sample_project/admin/views/accounts/new.slim")
+      assert_file_exists("#{@apptmp}/sample_project/admin/views/base/index.slim")
+      assert_file_exists("#{@apptmp}/sample_project/admin/views/sessions/new.slim")
+      assert_file_exists("#{@apptmp}/sample_project/admin/views/base/_sidebar.slim")
+      assert_file_exists("#{@apptmp}/sample_project/admin/views/base/index.slim")
+      assert_file_exists("#{@apptmp}/sample_project/admin/views/layouts/application.slim")
+      assert_file_exists("#{@apptmp}/sample_project/admin/views/sessions/new.slim")
+      assert_file_exists("#{@apptmp}/sample_project/public/admin")
+      assert_file_exists("#{@apptmp}/sample_project/public/admin/stylesheets")
+      assert_file_exists("#{@apptmp}/sample_project/app/models/account.rb")
+      assert_file_exists("#{@apptmp}/sample_project/db/seeds.rb")
+      assert_file_exists("#{@apptmp}/sample_project/db/migrate/001_create_accounts.rb")
+      assert_match_in_file 'Padrino.mount("Admin").to("/admin")', "#{@apptmp}/sample_project/config/apps.rb"
+      assert_match_in_file 'class Admin < Padrino::Application', "#{@apptmp}/sample_project/admin/app.rb"
+      assert_match_in_file 'role.project_module :accounts, "/accounts"', "#{@apptmp}/sample_project/admin/app.rb"
+      assert_match_in_file 'set :session_secret, "', "#{@apptmp}/sample_project/admin/app.rb"
+    end
+
     should 'not conflict with existing seeds file' do
       assert_nothing_raised { silence_logger { generate(:project, 'sample_project', "--root=#{@apptmp}", '-d=activerecord', '-e=erb') } }
 
